kubernetes-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  strategy:
    rollingUpdate:
      maxSurge: 10%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - flask-app
          topologyKey: topology.kubernetes.io/hostname
      containers:
      - name: flask-app
        image: your-dockerhub-username/your-flask-app-image:latest
        livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5000
            timeoutSeconds: 5
        readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5000
            timeoutSeconds: 5
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "500Mi"
            cpu: "1cpu"
          limits:
            memory: "1G"
            cpu: "2cpu"
