kubernetes-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: web
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
